# Client_Server

./: CMakeLists.txt  Client_main.cpp  NetworkDefinition.hpp  Readme.txt  Server_main.cpp  main.cpp
Client/include/: Client.h  Client.hpp  ClientTCP.h  ClientTCP.hpp  ClientUDP.h  ClientUDP.hpp  Protocol.h
Client/src/: Client.cpp  ClientTCP.cpp  ClientUDP.cpp
Network/: CMakeLists.txt  Config.hpp  Network.hpp  noCMakeLists.txt
Network/include/: Config.h  Export.hpp  IpAddress.h  IpAddress.hpp  Network.h  SafeTypes.h  SafeTypes.hpp  Socket.h  Socket.hpp  SocketHandle.h  SocketHandle.hpp  TcpListener.hpp  TcpSocket.h  TcpSocket.hpp  UdpSocket.h  UdpSocket.hpp
Network/src/: IpAddress.cpp  Socket.cpp  SocketBE.cpp  SocketBE.hpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
Network/src/Unix/: SocketBE_Unix.cpp  SocketBE_Unix.hpp
Network/src/Win32/: SocketBE_Win.cpp  SocketBE_Win.hpp
NetworkDefinition/: NetworkDefinition.h
Server/include/: Server.h  Server.hpp
Server/src/: Server.cpp
